--- a/project.json
+++ b/project.json
@@ -7,7 +7,8 @@
     "UiPath.Mail.Activities": "[1.7.2]",
     "UiPath.System.Activities": "[19.10.1]",
     "UiPath.UIAutomation.Activities": "[19.10.1]",
-    "UiPath.WebAPI.Activities": "[1.4.4]"
+    "UiPath.WebAPI.Activities": "[1.4.4]",
+    "UiPathTeam.ArchiveLib.Activity": "[1.1.1]"
   },
   "webServices": [],
   "schemaVersion": "4.0",
