--- a/project.json
+++ b/project.json
@@ -1,10 +1,10 @@
 {
-  "name": "UsingComplexLibraries",
-  "description": "Blank Process",
+  "name": "DependencyViewer",
+  "description": "Exptracts dependencies from the Orchestrator",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.7.2]",
-    "UiPath.System.Activities": "[19.12.0-preview]",
+    "UiPath.System.Activities": "[19.10.1]",
     "UiPath.UIAutomation.Activities": "[19.10.1]",
     "UiPath.WebAPI.Activities": "[1.4.4]",
     "UiPathTeam.ArchiveLib.Activity": "[1.1.1]"
